--- a/package.json
+++ b/package.json
@@ -7,26 +7,26 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+	"analyz": "set NODE_ENV=production && set npm_config_report=true && npm run build"
   },
   "dependencies": {
     "axios": "^0.17.0",
     "echarts": "^3.7.2",
     "element-ui": "^1.4.7",
-    "jquery": "^3.2.1",
     "vue": "^2.5.2",
     "vue-quill-editor": "^2.3.3",
-    "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
