--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "axios": "^0.17.0",
-    "echarts": "^3.7.2",
+    "echarts": "^3.8.5",
     "element-ui": "^1.4.12",
+    "fs": "0.0.1-security",
+    "net": "^1.0.2",
     "vue": "^2.5.2",
     "vue-quill-editor": "^2.3.3",
     "vue-router": "^3.0.1",
