--- a/package.json
+++ b/package.json
@@ -7,18 +7,17 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "analyz": "set NODE_ENV=production && set npm_config_report=true && npm run build"
   },
   "dependencies": {
     "axios": "^0.17.0",
-    "babel-polyfill": "^6.26.0",
     "echarts": "^3.7.2",
-    "element-ui": "^1.4.7",
-    "event-source-polyfill": "0.0.12",
-    "jquery": "^3.2.1",
+    "element-ui": "^2.4.7",
+    "event-source-polyfill": "0.0.16",
     "vue": "^2.5.2",
     "vue-quill-editor": "^2.3.3",
-    "vue-resource": "^1.3.5",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.0"
   },
@@ -31,6 +30,7 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
@@ -38,6 +38,7 @@
     "connect-history-api-fallback": "^1.4.0",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
+    "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
